--- a/index.html
+++ b/index.html
@@ -121,9 +121,7 @@
     <section id="about">
         <h1>About Me</h1>
         <p>Hi. <br>
-            <br>
-        <h3>I am Ishita Biswas.</h3><br>
-            <br>
+        <h3><mark>I am Ishita Biswas.</mark></h3><br>
         You will find me in the hallowed halls of Jadavpur University, a place where intellect thrives and
             innovation reigns supreme, in the Department of Instrumentation and Electronics Engineering. <br>The alchemy
             of code and creativity is my muse, as I sculpt elegant solutions from lines of logic.</p>
